# sample_docs

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  environment.yaml  requirements_sphinx.txt  setup.cfg
.github/actions/generate-docs/: Dockerfile  entrypoint.sh
.github/workflows/: publish.yml
.github/workflows/generate-docs/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/publish-docs/: README.md  entrypoint.sh
docs/: conf.py  index.rst  modules.rst  sample_module.rst
docs/source/: conf.py  foo.bar.rst  foo.rst  index.rst  modules.rst  notebooks.rst
foo/bar/: baz.py
notebook1/: sample.ipynb
notebook2/: sample.ipynb
sample_module/: sample_module.py
