[metadata]
name = sample_module
home_page = https://github.com/alartum/sample_docs
author = Aleksandr Artemenkov
author_email = alartum@gmail.com
project_urls =
    Source Code = https://github.com/alartum/sample_docs
summary = Sample package for docs generation.

license = MIT
classifier =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

python_requires = >=3.9

[files]
packages = sample_module

[flake8]
# Allow unused imports in __init__.py
per-file-ignores = __init__.py:F401
